--- a/20180514 essai 4.html
+++ b/20180514 essai 4.html
@@ -13,9 +13,9 @@
 
     <style type="text/css" class="silex-style"></style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1526310711797-0 {width: 281px; min-height: 133px; top: 67px; left: 207px;}</style>
+    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,128,1);}.silex-id-1526310711797-0 {width: 648px; min-height: 133px; top: 65px; left: 82px;}</style>
     <title></title>
-    <script type="text/json" class="silex-json-styles">[{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1526310711797-0":{"width":"281px","min-height":"133px","top":"67px","left":"207px"}},"mobile":{},"componentData":{}}]</script>
+    <script type="text/json" class="silex-json-styles">[{"desktop":{"body-initial":{"background-color":"rgba(255,255,128,1)"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1526310711797-0":{"width":"648px","min-height":"133px","top":"65px","left":"82px"}},"mobile":{},"componentData":{}}]</script>
 
 
 
@@ -74,4 +74,4 @@
 
 
 
-<div data-silex-type="text" class="editable-style silex-id-1526310711797-0 text-element" data-silex-id="silex-id-1526310711797-0"><div class="silex-element-content normal">Essai 4</div></div></body></html>
+<div style="" data-silex-type="text" class="editable-style silex-id-1526310711797-0 text-element" data-silex-id="silex-id-1526310711797-0"><div class="silex-element-content normal">Essai 4</div></div></body></html>
