Create 20180514 essai 4.html

--- a/20180514 essai 4.html
+++ b/20180514 essai 4.html
@@ -13,9 +13,9 @@
 
     <style type="text/css" class="silex-style"></style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,128,1);}.silex-id-1526310711797-0 {width: 446px; min-height: 42px; top: 59px; left: 131px;}</style>
+    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,128,1);}.silex-id-1526310711797-0 {width: 446px; min-height: 42px; top: 59px; left: 131px;}.silex-id-1526312474691-6 {width: 637px; background-color: rgb(255, 255, 255); min-height: 330px; top: 201px; left: 103px; background-image: url('bouchon1.jpg'); border-style: dashed; background-position: bottom center; background-repeat: repeat; background-size: contain; background-attachment: scroll; opacity: 0.5;}</style>
     <title></title>
-    <script type="text/json" class="silex-json-styles">[{"desktop":{"body-initial":{"background-color":"rgba(255,255,128,1)"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1526310711797-0":{"width":"446px","min-height":"42px","top":"59px","left":"131px"}},"mobile":{},"componentData":{}}]</script>
+    <script type="text/json" class="silex-json-styles">[{"desktop":{"body-initial":{"background-color":"rgba(255,255,128,1)"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1526310711797-0":{"width":"446px","min-height":"42px","top":"59px","left":"131px"},"silex-id-1526312474691-6":{"width":"637px","background-color":"rgb(255, 255, 255)","min-height":"330px","top":"201px","left":"103px","background-image":"url('/github/get/dossier-site-massage/master/bouchon1.jpg')","border-style":"dashed","background-position":"bottom center","background-repeat":"repeat","background-size":"contain","background-attachment":"scroll","opacity":"0.5"}},"mobile":{},"componentData":{}}]</script>
 
 
 
@@ -74,4 +74,4 @@
 
 
 
-<div style="" data-silex-type="text" class="editable-style silex-id-1526310711797-0 text-element" data-silex-id="silex-id-1526310711797-0"><div class="silex-element-content normal">mathieu.massage.com<br></div></div></body></html>
+<div style="" data-silex-type="text" class="editable-style silex-id-1526310711797-0 text-element" data-silex-id="silex-id-1526310711797-0"><div class="silex-element-content normal">mathieu.massage.com<br></div></div><div style="" data-silex-id="silex-id-1526312474691-6" class="editable-style silex-id-1526312474691-6 container-element" data-silex-type="container"></div></body></html>
