--- a/20180522 essai organisation.html
+++ b/20180522 essai organisation.html
@@ -290,14 +290,14 @@
             
             <div data-silex-type="container" class="editable-style silex-id-1424710230648 container-element hide-on-mobile" data-silex-id="silex-id-1424710230648">
                 <div data-silex-type="container" class="editable-style   container-element silex-id-1424710433398 editable-plugin-created" data-silex-id="silex-id-1424710433398">
-                    <div data-silex-type="text" class="editable-style  text-element silex-id-1424710332527 nav-element" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
+                    <div data-silex-type="text" class="editable-style  text-element silex-id-1424710332527 nav-element page-link-active" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Accueil</div>
                         </div>
                     </div>
                 </div>
                 <div data-silex-type="container" class="editable-style silex-id-1426536866650 editable-plugin-created container-element" data-silex-id="silex-id-1426536866650">
-                    <div data-silex-type="text" class="editable-style  text-element nav-element silex-id-1434425184890-0 page-link-active" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail">
+                    <div data-silex-type="text" class="editable-style  text-element nav-element silex-id-1434425184890-0" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Au travail<br></div>
                         </div>
@@ -319,7 +319,7 @@
                             <div style="text-align: center;">Pour les particuliers<br></div>
                         </div>
                     </div></div>
-            <div style="" data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1527006301811-2 page-accueil paged-element paged-element-hidden" data-silex-id="silex-id-1527006301811-2">
+            <div style="" data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1527006301811-2 page-accueil paged-element" data-silex-id="silex-id-1527006301811-2">
 
                     <div data-silex-type="text" class="editable-style  text-element nav-element silex-id-1527006301811-3" data-silex-id="silex-id-1527006301811-3" data-silex-href="#!page-particuliers">
                         <div class="silex-element-content normal">
@@ -339,7 +339,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil" data-silex-id="silex-id-1484949486466-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil paged-element-visible" data-silex-id="silex-id-1484949486466-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949486465-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949486465-4">
             <div data-silex-type="text" class="editable-style text-element silex-id-1424920356950 paragraph" data-silex-id="silex-id-1424920356950">
                 <div class="silex-element-content normal">
@@ -374,7 +374,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail" data-silex-id="silex-id-1484949640479-7">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail paged-element-hidden" data-silex-id="silex-id-1484949640479-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949640479-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949640479-6">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485636-2" data-silex-id="silex-id-1434426485636-2">
                 <div class="silex-element-content normal">
@@ -405,7 +405,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-en-tablissement page-particuliers paged-element-hidden" data-silex-id="silex-id-1484949717487-9">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-en-tablissement page-particuliers" data-silex-id="silex-id-1484949717487-9">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949717486-8 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949717486-8">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1471343044963-3" data-silex-id="silex-id-1471343044963-3">
                 <div class="silex-element-content normal">
