Create 20180522 essai organisation.html

--- a/20180522 essai organisation.html
+++ b/20180522 essai organisation.html
@@ -314,19 +314,19 @@
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634331833-2" data-silex-id="silex-id-1434634331833-2">
 
                     
-                <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-particuliers">
+                <div data-silex-type="text" class="editable-style  text-element nav-element silex-id-1434634331834-3" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-particuliers">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Pour les particuliers<br></div>
                         </div>
                     </div></div>
             <div style="" data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1527006301811-2 paged-element-hidden" data-silex-id="silex-id-1527006301811-2">
 
-                    <div data-silex-type="text" class="editable-style  text-element nav-element silex-id-1527006301811-3" data-silex-id="silex-id-1527006301811-3">
+                    
+                <div style="" data-silex-type="text" class="editable-style  text-element nav-element silex-id-1527006301811-3" data-silex-id="silex-id-1527006301811-3">
                         <div class="silex-element-content normal">
                             <div style="text-align: center; color: rgb(0, 0, 0);"><span style="color: rgb(0, 0, 0);"></span>En savoir plus<br></div>
                         </div>
-                    </div>
-                </div></div>
+                    </div></div></div>
         </div>
     </div>
 
