--- a/essai6.html
+++ b/essai6.html
@@ -125,9 +125,9 @@
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1489143154957-0 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1489143154957-0">
             <div data-silex-id="silex-id-1440793860642-0" class="editable-style silex-id-1440793860642-0 text-element top-text" data-silex-type="text">
                 <div class="silex-element-content normal">
-                    <h1 style="text-align: center;" class="heading1"><span style="color: rgb(255, 255, 255);">JOHN</span> SMITH </h1>
-                    <div style="text-align: center;">
-                        <h2 class="heading2">Photographe ~ Coder ~ Designer </h2>
+                    <h1 style="text-align: center;" class="heading1"><font style="color: rgb(255, 251, 152);" size="7"><span style="color: rgb(59, 32, 0);"><span style="color: rgb(255, 255, 255);"><span style="color: rgb(216, 42, 42);"></span>www</span><span style="color: rgb(237, 219, 27);">.</span><span style="color: rgb(59, 0, 0);"><span style="color: rgb(249, 200, 77);">Mathieu</span></span></span>.<span style="color: rgb(255, 167, 152);">m</span>a<span style="color: rgb(255, 152, 227);">s</span>sage.com</font></h1><font size="7">
+                    </font><div style="text-align: center;"><font size="7">
+                        </font><h2 class="heading2">Praticien en massage bien-être</h2><p><i><font face="arial,sans-serif">«&nbsp;Le massage permet à la personne qui le reçoit d’être en contact avec elle-même.&nbsp;»</font></i><br></p><p><br></p>
                     </div>
                 </div>
             </div>
