--- a/essai6.html
+++ b/essai6.html
@@ -276,17 +276,17 @@
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1489143528708-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1489143528708-6">
             <div data-silex-href="#!page-design" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button page-link-active" data-silex-type="text">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;">Design</div>
+                    <div style="text-align: center;">Au travail !<br></div>
                 </div>
             </div>
             <div data-silex-href="#!page-photo" data-silex-id="silex-id-1440800468283-8" class="editable-style text-element button silex-id-1440800468283-8" data-silex-type="text">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;">Photo</div>
+                    <div style="text-align: center;">Personnes fragilisées<br></div>
                 </div>
             </div>
             <div data-silex-href="#!page-code" data-silex-id="silex-id-1440800509589-9" class="editable-style text-element button silex-id-1440800509589-9" data-silex-type="text">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;">Code</div>
+                    <div style="text-align: center;">Particuliers<br></div>
                 </div>
             </div>
             <div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element col page-design paged-element" data-silex-type="text">
