--- a/essai6.html
+++ b/essai6.html
@@ -142,7 +142,7 @@
 
             <div data-silex-id="silex-id-1440798996856-3" class="editable-style silex-id-1440798996856-3 text-element" data-silex-type="text">
                 <div class="silex-element-content normal">
-                    <h2 class="heading2">A propos de moi</h2>
+                    <h2 class="heading2">À propos de moi</h2>
                 </div>
             </div>
             <div data-silex-id="silex-id-1440798669277-2" class="editable-style silex-id-1440798669277-2 image-element" data-silex-type="image"><img class="silex-element-content" src="../../../../../libs/templates/silex-templates/perso2/assets/me.jpg">
@@ -272,12 +272,12 @@
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1489143528708-7 section-element" data-silex-id="silex-id-1489143528708-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1489143528708-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1489143528708-6">
-            <div data-silex-href="#!page-design" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button page-link-active" data-silex-type="text">
+            <div data-silex-href="#!page-design" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button" data-silex-type="text">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">Au travail !<br></div>
                 </div>
             </div>
-            <div data-silex-href="#!page-photo" data-silex-id="silex-id-1440800468283-8" class="editable-style text-element button silex-id-1440800468283-8" data-silex-type="text">
+            <div data-silex-href="#!page-photo" data-silex-id="silex-id-1440800468283-8" class="editable-style text-element button silex-id-1440800468283-8 page-link-active" data-silex-type="text">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">Personnes fragilisées<br></div>
                 </div>
@@ -287,7 +287,7 @@
                     <div style="text-align: center;">Particuliers<br></div>
                 </div>
             </div>
-            <div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element col page-design paged-element" data-silex-type="text">
+            <div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element col page-design paged-element paged-element-hidden" data-silex-type="text">
                 <div class="silex-element-content normal">Doner ea ipsum, chicken sed hamburger do incididunt qui pork capicola. Velit et porchetta, filet mignon ground round bresaola laborum. Aute fugiat pork chop drumstick, frankfurter do chicken kielbasa meatball. Capicola chuck fugiat, culpa
                     bacon consectetur biltong tenderloin ipsum quis aliqua hamburger eiusmod incididunt. Cupim tongue fugiat elit laboris alcatra sint ribeye pariatur pig meatloaf irure bresaola picanha boudin. Mollit cupim aute, sunt minim aliquip drumstick
                     rump chuck id nisi tongue velit bresaola. Est pariatur t-bone occaecat meatball tongue officia.
@@ -309,7 +309,7 @@
                     doner tenderloin occaecat filet mignon pork loin. Ut velit voluptate spare ribs in est. Tenderloin swine ex ipsum, id aute adipisicing venison strip steak consequat turducken.</div>
             </div>
 
-            <div data-silex-id="silex-id-1440801309675-13" class="editable-style text-element col silex-id-1440801309675-13 page-code paged-element paged-element-hidden" data-silex-type="text">
+            <div data-silex-id="silex-id-1440801309675-13" class="editable-style text-element col silex-id-1440801309675-13 page-code paged-element" data-silex-type="text">
                 <div class="silex-element-content normal">Enim pancetta pastrami ad aliqua, ullamco do bacon nisi shank in ball tip commodo cupidatat. Excepteur strip steak magna dolore t-bone labore brisket nulla tail. Landjaeger enim sed meatloaf ut salami cow shank magna ham hock venison boudin
                     capicola pancetta ad. Porchetta capicola pork belly in leberkas. Pork labore meatball, cupidatat meatloaf sausage esse pork loin. Shankle pariatur et, kielbasa pastrami swine landjaeger esse cupim fatback beef ribs ground round consequat.
                     <br>
