--- a/essai6.html
+++ b/essai6.html
@@ -272,12 +272,12 @@
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1489143528708-7 section-element" data-silex-id="silex-id-1489143528708-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1489143528708-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1489143528708-6">
-            <div data-silex-href="#!page-design" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button" data-silex-type="text">
+            <div data-silex-href="#!page-design" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button page-link-active" data-silex-type="text">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">Au travail !<br></div>
                 </div>
             </div>
-            <div data-silex-href="#!page-photo" data-silex-id="silex-id-1440800468283-8" class="editable-style text-element button silex-id-1440800468283-8 page-link-active" data-silex-type="text">
+            <div data-silex-href="#!page-photo" data-silex-id="silex-id-1440800468283-8" class="editable-style text-element button silex-id-1440800468283-8" data-silex-type="text">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">Personnes fragilisées<br></div>
                 </div>
@@ -287,29 +287,11 @@
                     <div style="text-align: center;">Particuliers<br></div>
                 </div>
             </div>
-            <div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element col page-design paged-element paged-element-hidden" data-silex-type="text">
-                <div class="silex-element-content normal">Doner ea ipsum, chicken sed hamburger do incididunt qui pork capicola. Velit et porchetta, filet mignon ground round bresaola laborum. Aute fugiat pork chop drumstick, frankfurter do chicken kielbasa meatball. Capicola chuck fugiat, culpa
-                    bacon consectetur biltong tenderloin ipsum quis aliqua hamburger eiusmod incididunt. Cupim tongue fugiat elit laboris alcatra sint ribeye pariatur pig meatloaf irure bresaola picanha boudin. Mollit cupim aute, sunt minim aliquip drumstick
-                    rump chuck id nisi tongue velit bresaola. Est pariatur t-bone occaecat meatball tongue officia.
-                    <br>
-                    <br>Doner ad magna alcatra, et short ribs id qui. Proident short ribs turducken frankfurter flank, beef minim spare ribs laborum bresaola ground round. Drumstick pastrami aute, kielbasa eiusmod venison turducken. Ad id cupim velit
-                    filet mignon ea, turkey prosciutto ball tip sirloin pancetta minim alcatra. Flank irure pork chop veniam, culpa anim eiusmod kevin landjaeger. Rump pancetta venison ut short loin reprehenderit, pig pork chop flank dolore non hamburger
-                    jowl.
-                    <br>
-                    <br>Aliquip incididunt nostrud, boudin sunt cupidatat kevin in. Mollit cupim bacon veniam. Consectetur turkey venison, doner lorem magna exercitation bacon bresaola aliqua nisi eu sed. Fugiat in sirloin, landjaeger nulla meatloaf eu
-                    short ribs sed. Non in chuck pig. Lorem sint magna boudin shank beef ribs sirloin rump, ham deserunt nostrud excepteur ribeye. Tail short ribs dolor anim meatloaf, sirloin deserunt shankle ham ground round in magna velit.
-                    <br>
-                    <br>Incididunt in short ribs bacon kevin est. Short loin tempor ham hock, ball tip filet mignon laboris capicola. Officia alcatra tri-tip andouille cow. Ipsum laboris nostrud rump sausage consequat pastrami proident ball tip do qui
-                    dolor porchetta deserunt chicken.
-                    <br>
-                    <br>In reprehenderit ipsum nisi picanha, shoulder brisket jowl tongue fatback labore turducken minim short loin. Et dolore tempor capicola sunt fugiat. Quis ham hock et, tri-tip eiusmod pancetta drumstick in boudin t-bone venison.
-                    Ground round adipisicing filet mignon drumstick frankfurter, elit andouille consequat bacon dolore.
-                    <br>
-                    <br>Fugiat pork loin esse commodo kevin frankfurter, tongue jerky exercitation. Ribeye est tempor et cupim ut. Tongue brisket ex, nulla ut tempor minim chicken sint dolor venison strip steak est. Pig aliqua et, ut alcatra elit labore
-                    doner tenderloin occaecat filet mignon pork loin. Ut velit voluptate spare ribs in est. Tenderloin swine ex ipsum, id aute adipisicing venison strip steak consequat turducken.</div>
+            <div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element col page-design paged-element" data-silex-type="text">
+                <div class="silex-element-content normal">Je propose des massages d’une durée de 10 à 12 minutes, des pauses-massages® pour lesquels la personne massée est habillée et assise sur une chaise ergonomique. C’est un massage de relaxation et de détente qui touche plus particulièrement les zones de stress (nuque, épaules, bras et dos). C'est la raison pour laquelle il constitue une action pertinente pour lutter contre les risques psycho-sociaux : il répond à un besoin de détente, de lien et de convivialité.&nbsp; &nbsp;<br>&nbsp;<br>J’interviens sur le lieu de travail, pour les entreprises, les comités d’entreprises, les administrations, les associations mais également dans le cadre d’événements sur la métropole lilloise.<br><br>Cette prestation est accessible à tous car la personne massée garde ses vêtements et est facile à mettre en place. Six mètres carrés suffisent et j'apporte le matériel. Il est possible de recevoir quatre personnes par heure.<br><br>Tarif&nbsp;: sur devis. <br></div>
             </div>
 
-            <div data-silex-id="silex-id-1440801309675-13" class="editable-style text-element col silex-id-1440801309675-13 page-code paged-element" data-silex-type="text">
+            <div data-silex-id="silex-id-1440801309675-13" class="editable-style text-element col silex-id-1440801309675-13 page-code paged-element paged-element-hidden" data-silex-type="text">
                 <div class="silex-element-content normal">Enim pancetta pastrami ad aliqua, ullamco do bacon nisi shank in ball tip commodo cupidatat. Excepteur strip steak magna dolore t-bone labore brisket nulla tail. Landjaeger enim sed meatloaf ut salami cow shank magna ham hock venison boudin
                     capicola pancetta ad. Porchetta capicola pork belly in leberkas. Pork labore meatball, cupidatat meatloaf sausage esse pork loin. Shankle pariatur et, kielbasa pastrami swine landjaeger esse cupim fatback beef ribs ground round consequat.
                     <br>
