--- a/essai6.html
+++ b/essai6.html
@@ -160,16 +160,7 @@
             <div data-silex-id="silex-id-1440800016088-6" class="editable-style silex-id-1440800016088-6 text-element middle-text" data-silex-type="text">
                 <div class="silex-element-content normal">
                     <h2 style="text-align: center;" class="heading2">Un peu de baratin sur le massage. <br></h2>
-                    <p style="text-align: center;" class="normal">Est-il vraiment nécessaire de rappeler les nombreux bienfaits du massage bien-être ?</p><p style="text-align: center;" class="normal"><br></p><p style="text-align: center;" class="normal">Andouille ut in ball tip picanha et. Laborum hamburger sint lorem ribeye enim. Filet mignon magna anim in, ground round consequat aliquip in prosciutto incididunt officia culpa rump enim eu. Bresaola proident sed beef tongue in voluptate
-                        duis exercitation nostrud. Doner eu fatback ground round ea. Lorem tail kevin drumstick excepteur aliqua pork belly t-bone hamburger.</p>
-                    <p style="text-align: center;" class="normal"></p>
-                    <p style="text-align: center;" class="normal">Commodo in ground round turkey. Duis mollit filet mignon shankle, eiusmod excepteur nostrud labore fatback beef ribs tempor incididunt pork chop. Boudin et pork chop drumstick, t-bone enim porchetta officia cupim short loin qui nisi.
-                        Prosciutto pariatur flank filet mignon tenderloin dolore reprehenderit, fatback cow commodo aute tri-tip quis.</p>
-                    <p style="text-align: center;" class="normal">Andouille ut in ball tip picanha et. Laborum hamburger sint lorem ribeye enim. Filet mignon magna anim in, ground round consequat aliquip in prosciutto incididunt officia culpa rump enim eu. Bresaola proident sed beef tongue in voluptate
-                        duis exercitation nostrud. Doner eu fatback ground round ea. Lorem tail kevin drumstick excepteur aliqua pork belly t-bone hamburger.
-                    </p>
-                    <p style="text-align: center;" class="normal">Commodo in ground round turkey. Duis mollit filet mignon shankle, eiusmod excepteur nostrud labore fatback beef ribs tempor incididunt pork chop. Boudin et pork chop drumstick, t-bone enim porchetta officia cupim short loin qui nisi.
-                        Prosciutto pariatur flank filet mignon tenderloin dolore reprehenderit, fatback cow commodo aute tri-tip quis.</p>
+                    <p style="text-align: center;" class="normal">Est-il vraiment nécessaire de rappeler les nombreux bienfaits du massage bien-être ? Si vous lisez ceci, alors il me semble que vous n’y êtes pas indifférents.</p><p style="text-align: center;" class="normal"><br></p><p style="text-align: center;" class="normal">Voici ce qui me plaît quand je me fais masser et qui explique en partie comment je pratique les massages bien-être.</p><p style="text-align: center;" class="normal">J’aime vivre mon corps, vivre la douceur, ressentir l’intention de bienveillance, l’attention qui m’est offerte pendant ce temps. J’aime aussi avoir une autre perception du déroulement du temps. Je me réjouis à l’idée qu’un massage, c’est du temps de gagné !</p>
                     <p class="normal" style="text-align: center;"></p>
                 </div>
             </div>
