--- a/essai6.html
+++ b/essai6.html
@@ -256,7 +256,7 @@ détente qui touche plus particulièrement les zones de stress (nuque,
 action pertinente pour lutter contre les risques psycho-sociaux : il 
 répond à un besoin de détente, de lien et de convivialité.&nbsp; &nbsp;</div><br>Cette prestation est accessible à tous car la personne massée garde ses vêtements et est facile à mettre en place. Six mètres carrés suffisent et j'apporte le matériel. Il est possible de recevoir quatre personnes par heure.<br><br>Tarif&nbsp;: sur devis.<br></div></div>
             </div>
-            <div data-silex-href="#!page-accueil" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button text-style-4 page-link-active" data-silex-type="text">
+            <div data-silex-href="#!page-accueil" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button text-style-4 page-link-active" data-silex-type="text" title="Lien vers la rubrique &quot;Massage sur le lieu de travail&quot;">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">Au travail !<br></div>
                 </div>
