--- a/essai6.html
+++ b/essai6.html
@@ -149,7 +149,7 @@
                     <p class="normal">Le massage est ma nouvelle activité professionnelle : j’ai décidé d’investir mon enthousiasme et ma bonne humeur dans le cadre d’une relation à l’autre qui passe par le toucher.<br><br>Je souhaite pouvoir proposer au plus grand nombre des massages qui sont non-thérapeutiques et sans lien avec des médecines traditionnelles ou dites douces ou une quelconque spiritualité, c'est pourquoi j’ai suivi la formation de l’<a href="https://www.ifjs.fr/">IFJS</a>. Cette école forme annuellement plusieurs milliers de soignants au toucher-massage<font size="4">®</font>.<br><br>En France, l'activité de massage bien-être n'est pas réglementée (ni même reconnue), c'est la raison pour laquelle on peut trouver une grande variété de prestations. Je vous propose de me contacter afin de définir ensemble celle qui vous intéresse !
 <br>&nbsp;<br>Chaque massage est adapté au contexte et à la personne massée, tout en respectant mes limites.<br></p></div>
             </div>
-        <div data-silex-id="silex-id-1440798669277-2" class="editable-style silex-id-1440798669277-2 image-element" data-silex-type="image" style=""><img class="silex-element-content" src="../../../../../libs/templates/silex-templates/perso2/assets/me.jpg">
+        <div data-silex-id="silex-id-1440798669277-2" class="editable-style silex-id-1440798669277-2 image-element" data-silex-type="image" style="" title="mon portrait !"><img class="silex-element-content" src="../../../../../libs/templates/silex-templates/perso2/assets/me.jpg">
             </div></div>
     </div>
     
