--- a/20180806 site massage mf.html
+++ b/20180806 site massage mf.html
@@ -248,13 +248,10 @@
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1489143528708-7 section-element" data-silex-id="silex-id-1489143528708-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1489143528708-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1489143528708-6"><div data-silex-id="silex-id-1440800819834-10" class="editable-style silex-id-1440800819834-10 text-element paged-element page-accueil" data-silex-type="text">
-                <div class="silex-element-content normal">J’interviens sur le lieu de travail, pour les entreprises, les comités d’entreprises, les administrations, les associations mais également dans le cadre d’événements sur la métropole lilloise.<br><div><div><br>Je propose des massages d’une durée de 10 à 12 minutes, des 
-pauses-massages® pour lesquels la personne massée est habillée et assise
+                <div class="silex-element-content normal">Le massage bien-être constitue une action pertinente pour lutter contre les risques psycho-sociaux : il répond notamment à un besoin de détente, de lien et de convivialité.&nbsp;<div><br><div>J’interviens sur le lieu de travail, pour les entreprises, les comités d’entreprises, les administrations, les associations sur la métropole lilloise. Je propose des pauses-massages®&nbsp;d’une durée de 10 à 12 minutes, pour lesquels la personne massée est habillée et assise
  sur une chaise ergonomique. C’est un massage de relaxation et de 
 détente qui touche plus particulièrement les zones de stress (nuque, 
-épaules, bras et dos). C'est la raison pour laquelle il constitue une 
-action pertinente pour lutter contre les risques psycho-sociaux : il 
-répond à un besoin de détente, de lien et de convivialité.&nbsp; &nbsp;</div><br>Cette prestation est accessible à tous car la personne massée garde ses vêtements et est facile à mettre en place. Six mètres carrés suffisent et j'apporte le matériel. Il est possible de recevoir quatre personnes par heure.<br><br>Tarif&nbsp;: sur devis.<br></div></div>
+épaules, bras et dos).&nbsp;<div><div><br></div>Cette prestation est accessible à tous car la personne massée garde ses vêtements et est facile à mettre en place. Six mètres carrés suffisent et j'apporte le matériel. Il est possible de recevoir quatre personnes par heure.<br><br>Tarif&nbsp;: sur devis.<br></div></div></div></div>
             </div>
             <div data-silex-href="#!page-accueil" data-silex-id="silex-id-1440800306868-7" class="editable-style silex-id-1440800306868-7 text-element button text-style-4 page-link-active" data-silex-type="text" title="Lien vers la rubrique &quot;Massage sur le lieu de travail&quot;">
                 <div class="silex-element-content normal">
