Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -360,7 +360,7 @@
                 </div>
             </div>
             <div data-silex-type="container" class="editable-style silex-id-1425063611139 container-element" data-silex-id="silex-id-1425063611139"></div>
-            <div data-silex-type="container" class="editable-style silex-id-1425063401661 container-element hide-on-mobile" data-silex-id="silex-id-1425063401661"></div>
+            <div data-silex-type="container" class="editable-style silex-id-1425063401661 container-element" data-silex-id="silex-id-1425063401661"></div>
         </div>
     </div>
 
