Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -290,14 +290,14 @@
             
             <div data-silex-type="container" class="editable-style silex-id-1424710230648 container-element hide-on-mobile" data-silex-id="silex-id-1424710230648">
                 <div data-silex-type="container" class="editable-style container-element silex-id-1424710433398 editable-plugin-created" data-silex-id="silex-id-1424710433398">
-                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element page-link-active" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
+                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Accueil</div>
                         </div>
                     </div>
                 </div>
                 <div data-silex-type="container" class="editable-style silex-id-1426536866650 editable-plugin-created container-element" data-silex-id="silex-id-1426536866650">
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0 page-link-active" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Au travail !</div>
                         </div>
@@ -332,7 +332,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil" data-silex-id="silex-id-1484949486466-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil paged-element-hidden" data-silex-id="silex-id-1484949486466-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949486465-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949486465-4">
             <div data-silex-type="text" class="editable-style text-element silex-id-1424920356950 paragraph" data-silex-id="silex-id-1424920356950">
                 <div class="silex-element-content normal">
@@ -360,17 +360,17 @@ relation à l’autre qui passe par le toucher.<br></p>
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail- paged-element-hidden" data-silex-id="silex-id-1484949640479-7">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail-" data-silex-id="silex-id-1484949640479-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949640479-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949640479-6">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485636-2" data-silex-id="silex-id-1434426485636-2">
                 <div class="silex-element-content normal">
-                    <h1 class="heading1"><br></h1>
-                    <h1 class="heading1">Pourquoi, une pause-massage ?<br></h1>
+                    <h1 class="heading1"></h1>
+                    <h1 class="heading1"></h1><h1 class="heading1">Une pause-massage au boulot,<br></h1><h1 class="heading1">Pourquoi ?<br></h1>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485665-3" data-silex-id="silex-id-1434426485665-3">
                 <div class="silex-element-content normal">
-                    <p class="normal">La massage bien-être constitue une action pertinente sur le lieu du travail pour les raisons qui suivent.<br>Tout d'abord, il répond à un fort besoin de détente et de convivialité du personnel. Parce qu'il est dynamisant et revitalisant, il rend la personne massée plus disponible à ses missions et ainsi il contribue à l'amélioration de l'efficience recherchée par l'employeur. Il participe à la prévention contre les risques musculo-squelettiques, et cela, parce qu'il fait prendre conscience à la personne massée de ses zones de tensions musculaires tout en les soulageant. Par la relaxation apportée, il participe également à la prévention contre les risques psycho-sociaux.<br>Ainsi, la mise en place d'un atelier de pause-massage® participe au bien-être et la santé de vos collaborateurs et s’intègre dans un programme de santé bien-être au travail. Elle signifie que l’employeur mène réellement des actions de préventions en la matière, elle améliore la perception que les collaborateurs ont de leur employeur et en contribuant à changer leur rapport au travail.<br></p>
+                    <p class="normal"></p><p class="normal">Tout d'abord, parce que le massage bien-être répond à un fort besoin de détente et de convivialité du personnel. <br></p><p class="normal">Ensuite, parce qu'il est également dynamisant et revitalisant, il rend la personne massée plus disponible à ses missions et ainsi il contribue à l'amélioration de l'efficience recherchée par l'employeur. <br></p><p class="normal">Parce qu'il fait prendre conscience à la personne massée de ses zones de tensions musculaires tout en les soulageant. En cela, une pause-massage participe à la prévention contre les risques musculo-squelettiques. </p><p class="normal">Par la relaxation apportée, il participe également à la lutte contre les risques psycho-sociaux.<br></p><p class="normal">Ainsi, la mise en place d'un atelier de pause-massage® participe au bien-être et la santé de vos collaborateurs et s’intègre pertinemment dans un programme de santé bien-être au travail. <br></p><p class="normal">Mettre en place une pause-massage sur le temps de travail signifie que l’employeur mène réellement des actions de préventions en la matière, et, elle améliore la perception que les collaborateurs ont de leur employeur et en contribuant à changer leur rapport au travail.<br></p>
                 </div>
             </div>
             
