Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div data-silex-type="container" class="editable-style silex-id-1426536866650 editable-plugin-created container-element" data-silex-id="silex-id-1426536866650">
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0 page-link-active" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Au travail !</div>
                         </div>
@@ -305,7 +305,7 @@
                 </div>
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634286306-0" data-silex-id="silex-id-1434634286306-0">
 
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634286307-1" data-silex-id="silex-id-1434634286307-1" data-silex-href="#!page-personnes-fragilis-es">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634286307-1 page-link-active" data-silex-id="silex-id-1434634286307-1" data-silex-href="#!page-personnes-fragilis-es">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Personnes fragilisées</div>
                         </div>
@@ -348,7 +348,7 @@ relation à l’autre qui passe par le toucher.<br></p>
             
             <div data-silex-type="text" class="editable-style silex-id-1434426151026-1 text-element paragraph" data-silex-id="silex-id-1434426151026-1">
                 <div class="silex-element-content normal">
-                    <p class="normal">Je souhaite pouvoir proposer au plus grand nombre des massages qui sont non-thérapeutiques et sans lien avec des médecines traditionnelles ou dites douces ou une quelconque spiritualité, c'est pourquoi j’ai suivi la formation de l’IFJS (institut de formation Joël Savatofsky). Cette école forme annuellement plusieurs milliers de soignants au toucher-massage®.<br>En France, l'activité de massage bien-être n'est pas réglementée (ni même reconnue), c'est la raison pour laquelle on peut trouver une grande variété de prestations. Je vous propose de me contacter afin de définir ensemble celle qui vous intéresse ! Chaque massage est adapté au contexte et à la personne massée, tout en respectant mes limites.<br></p>
+                    <p class="normal">Je souhaite pouvoir proposer au plus grand nombre des massages qui sont non-thérapeutiques et sans lien avec des médecines traditionnelles ou dites douces ou une quelconque spiritualité, c'est pourquoi j’ai suivi la formation de l’IFJS (institut de formation Joël Savatofsky). Cette école forme annuellement plusieurs milliers de soignants au toucher-massage®.<br>En France, l'activité de massage bien-être n'est pas réglementée, c'est la raison pour laquelle on peut trouver une grande variété de prestations. Je vous propose de me contacter afin de définir ensemble celle qui vous intéresse ! Chaque massage est adapté au contexte et à la personne massée, tout en respectant mes limites.<br></p>
                 </div>
             </div>
             <div data-silex-type="container" class="editable-style silex-id-1425063611139 container-element" data-silex-id="silex-id-1425063611139"></div>
@@ -399,12 +399,7 @@ quatre personnes par heure. Tarif : sur devis.</p>
     <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-contact page-personnes-fragilis-es" data-silex-id="silex-id-1484949717487-9">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949717486-8 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949717486-8">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1471343044963-3" data-silex-id="silex-id-1471343044963-3">
-                <div class="silex-element-content normal">
-                    <p class="normal" style="text-align: center;">
-                        <br>
-                    </p>
-                    <p class="normal" style="text-align: center;">Nothing here yet. Waiting for your content...</p>
-                </div>
+                <div class="silex-element-content normal">Tout le monde a le droit d’être touché ! Y compris les personnes agées, handicapées ou souffrant d'un maladie chronique qui ont également besoin de détente et de relaxation par le toucher. Il s'agit d'aider la personne à mieux vivre son corps ou encore de lui proposer une démarche d'accompagnement qui répond à un besoin de mieux être.<br><br>Je propose des séances de toucher-massage® en intervenant en établissement, en EHPAD, en Ehpa, mas, fam sur la métropole lilloise. <br><br>Tarif : sur devis.<br></div>
             </div>
         </div>
     </div>
@@ -423,7 +418,7 @@ quatre personnes par heure. Tarif : sur devis.</p>
 
 
 
-<div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188332860-3" data-silex-id="silex-id-1535188332860-3" style="">
+<div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188332860-3 page-au-travail- paged-element" data-silex-id="silex-id-1535188332860-3" style="">
                 <div class="silex-element-content normal">Le saviez-vous ?<br><p class="normal">En France en 2007, le coût social du stress a été estimé entre 2 et 3 milliards d’euros (étude INRS et Arts et Métiers ParisTech). Plus d’informations sur le site de l’INRS<br><br><br><br></p>
                 </div>
             </div></body></html>
