--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -290,7 +290,7 @@
             
             <div data-silex-type="container" class="editable-style silex-id-1424710230648 container-element hide-on-mobile" data-silex-id="silex-id-1424710230648">
                 <div data-silex-type="container" class="editable-style container-element silex-id-1424710433398 editable-plugin-created" data-silex-id="silex-id-1424710433398">
-                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
+                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element page-link-active" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Accueil</div>
                         </div>
@@ -313,7 +313,7 @@
                 </div>
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634331833-2" data-silex-id="silex-id-1434634331833-2">
 
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3 page-link-active" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Contact</div>
                         </div>
@@ -332,7 +332,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil paged-element-hidden" data-silex-id="silex-id-1484949486466-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil" data-silex-id="silex-id-1484949486466-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949486465-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949486465-4">
             <div data-silex-type="text" class="editable-style text-element silex-id-1424920356950 paragraph" data-silex-id="silex-id-1424920356950">
                 <div class="silex-element-content normal">
@@ -360,7 +360,7 @@ relation à l’autre qui passe par le toucher.<br></p>
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail-" data-silex-id="silex-id-1484949640479-7">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail- paged-element-hidden" data-silex-id="silex-id-1484949640479-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949640479-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949640479-6">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485636-2" data-silex-id="silex-id-1434426485636-2">
                 <div class="silex-element-content normal">
@@ -396,14 +396,14 @@ quatre personnes par heure. Tarif : sur devis.</p>
             </div>
         </div>
     <div data-silex-type="container" class="editable-style silex-id-1434426787582-9 container-element" data-silex-id="silex-id-1434426787582-9" style=""></div></div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-personnes-fragilis-es paged-element-hidden" data-silex-id="silex-id-1484949717487-9">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-personnes-fragilis-es" data-silex-id="silex-id-1484949717487-9">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949717486-8 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949717486-8">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1471343044963-3" data-silex-id="silex-id-1471343044963-3">
                 <div class="silex-element-content normal">Tout le monde a le droit d’être touché ! Y compris les personnes agées, handicapées ou souffrant d'un maladie chronique qui ont également besoin de détente et de relaxation par le toucher. Il s'agit d'aider la personne à mieux vivre son corps ou encore de lui proposer une démarche d'accompagnement qui répond à un besoin de mieux être.<br><br>Je propose des séances de toucher-massage® en intervenant en établissement, en EHPAD, en Ehpa, mas, fam sur la métropole lilloise. <br><br>Tarif : sur devis.<br></div>
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element" data-silex-id="silex-id-1535188603126-4">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element paged-element-hidden" data-silex-id="silex-id-1535188603126-4">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1535188603126-5" data-silex-id="silex-id-1535188603126-5">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188603126-6" data-silex-id="silex-id-1535188603126-6">
                 <div class="silex-element-content normal"><br>mathieu.massage@posteo.net<br>06.27.58.06.64<br>siret : à venir !<br></div>
